unpackaged/main/default/objects/ET_Vehicle_Master__c/ET_Vehicle_Master__c.object-meta.xml
<CustomObject>
    <label>Pricing Vehicle Master</label>
    <nameField>
        <displayFormat>V-{0000}</displayFormat>
        <label>Vehicle Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pricing Vehicle Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>