unpackaged/main/default/objects/ET_Vehicle_Master__c/fields/ET_Deduction_Rate_for_latest_new_pri_del__c.field-meta.xml
<CustomField>
    <fullName>ET_Deduction_Rate_for_latest_new_pri_del__c</fullName>
    <label>Deduction Rate for latest new price- del</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>