unpackaged/main/default/objects/ET_Vehicle_Master__c/fields/ET_Depreciation_Rate_Max__c.field-meta.xml
<CustomField>
    <fullName>ET_Depreciation_Rate_Max__c</fullName>
    <label>Depreciation Rate(Max) - del</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>