unpackaged/main/default/objects/ET_Vehicle_Master__c/fields/ET_Fuel_Type__c.field-meta.xml
<CustomField>
    <fullName>ET_Fuel_Type__c</fullName>
    <formula>text(ET_Vehicle_Fuel_Master__r.ET_Fuel_Type__c)</formula>
    <label>Fuel Type</label>
    <type>Text</type>
</CustomField>