unpackaged/main/default/objects/ET_Vehicle_Master__c/fields/ET_Model__c.field-meta.xml
<CustomField>
    <fullName>ET_Model__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Model</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>