unpackaged/main/default/objects/ET_Vehicle_Master__c/fields/ET_Specs__c.field-meta.xml
<CustomField>
    <fullName>ET_Specs__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Specs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>