unpackaged/main/default/objects/ET_Vehicle_Master__c/fields/ET_Vehicle_Fuel_Consumption__c.field-meta.xml
<CustomField>
    <fullName>ET_Vehicle_Fuel_Consumption__c</fullName>
    <label>Vehicle Fuel Consumption(Km per Liter)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>