unpackaged/main/default/objects/ET_Vehicle_Master__c/fields/ET_Vehicle_Fuel_Master__c.field-meta.xml
<CustomField>
    <fullName>ET_Vehicle_Fuel_Master__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Vehicle Fuel Master</label>
    <referenceTo>ET_Vehicle_Fuel_Master__c</referenceTo>
    <relationshipLabel>Pricing Vehicle Master</relationshipLabel>
    <relationshipName>Vehicle_Master</relationshipName>
    <type>Lookup</type>
</CustomField>