unpackaged/main/default/objects/ET_Vehicle_Master__c/fields/ET_Vehicle_Latest_New_Purchase_Price__c.field-meta.xml
<CustomField>
    <fullName>ET_Vehicle_Latest_New_Purchase_Price__c</fullName>
    <label>Vehicle Latest New Purchase Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>