unpackaged/main/default/objects/ET_Vehicle_Master__c/fields/ET_Vehicle_Make__c.field-meta.xml
<CustomField>
    <fullName>ET_Vehicle_Make__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle Make</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>