unpackaged/main/default/objects/ET_Vehicle_Master__c/fields/ET_Vehicle_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>ET_Vehicle_Sub_Type__c</fullName>
    <formula>text( ET_Vehicle_Type_Master__r.ET_Vehicle_Type__c )+&#39;-&#39;+text(ET_Vehicle_Type_Master__r.ET_Vehicle_Sub_Type__c)</formula>
    <label>Vehicle Sub Type</label>
    <type>Text</type>
</CustomField>