unpackaged/main/default/objects/ET_Vehicle_Master__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ET_Vehicle_Make__c</columns>
    <columns>ET_Model__c</columns>
    <columns>Type__c</columns>
    <columns>ET_Deduction_Rate_for_latest_new_pri_del__c</columns>
    <columns>ET_Depreciation_Rate_Max__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>